tests/test0145.exp
Uncatched error has occurred.
Oops
#3 error: (tests/test0145.ctr: 4)
#2 times: (tests/test0145.ctr: 3)
#1 times: (tests/test0145.ctr: 2)
