tests/test0145.ctr
#NOAST
3 times: {
	3 times: {
		thisBlock error: 'Oops'.
	}.
}.
